experience-jump-stop-build

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  overflow-x:hidden 
+} 
 
 * {
   margin: 0;
